# Scilab-Workbench

./: ACKNOWLEDGEMENTS  CHANGES  Imake.incl  Imakefile  Makefile  Makefile.amk  Makefile.in  Makefile.incl  Makefile.incl.in  Makefile.incl.mak  Makefile.mak  Path.incl  README  README.win32  README_Windows.txt  Version.incl  configure  configure.in  notice.ps  patchlevel.h  scilab.quit  scilab.star
browsable_source/2.2/Unix/scilab-2.2/: Makefile.in  Makefile.incl  Makefile.incl.in  Makefile.solaris  README  configure.in  scilab.quit  scilab.star
browsable_source/2.2/Unix/scilab-2.2/demos/: alldems.dem
browsable_source/2.2/Unix/scilab-2.2/demos/anim/: anim.dem  anim1.dem  anim5.dem  anim6.dem
browsable_source/2.2/Unix/scilab-2.2/demos/bike/: bike.dem  bike_pub.sci  pub.dem
browsable_source/2.2/Unix/scilab-2.2/demos/control/: mixed.dem
browsable_source/2.2/Unix/scilab-2.2/demos/fec/: fec.dem
browsable_source/2.2/Unix/scilab-2.2/demos/graphics/: demo_01.bas  dessin.dem  xdemo-1.dem
browsable_source/2.2/Unix/scilab-2.2/demos/icse/: icsua.sci  readme
browsable_source/2.2/Unix/scilab-2.2/demos/lmitool/: lmi.dem  testlinprog
browsable_source/2.2/Unix/scilab-2.2/demos/metanet/: metro.sci
browsable_source/2.2/Unix/scilab-2.2/demos/scicos/: demo1.cosf  demo2.cosf  demo6.cosf  scicos.dem
browsable_source/2.2/Unix/scilab-2.2/demos/velpic/: plotdb.sci  snapshot.sci
browsable_source/2.2/Unix/scilab-2.2/doc/: Makefile
browsable_source/2.2/Unix/scilab-2.2/doc/intro/: chap0.tex  compl0.tex  demosession.tex  intersci.tex  intro.couv2  intro.tex  programming.tex
browsable_source/2.2/Unix/scilab-2.2/doc/metanet/: Makefile  graph2.ps  graph3.fig  graph3.ps  graph4.fig  graph4.ps  metanet.tex
browsable_source/2.2/Unix/scilab-2.2/doc/scicos/: Makefile  fig00.epsf  fig00.tex  figcos3.epsf  figcos4.tex  figcos5.epsf  pdemo1.epsf  pdemo1.tex  pdemo3.epsf  pdemo3.tex  pdemo4.epsf
browsable_source/2.2/Unix/scilab-2.2/doc/signal/: Makefile  chap2.tex  chap8.tex  chap9.tex
browsable_source/2.2/Unix/scilab-2.2/geci/: buffer_dynamiques.c  formatage_messages.c  scr_messages.c  scruteur.c
browsable_source/2.2/Unix/scilab-2.2/imp/: Slatexpr2.c  Slatexprs.c
browsable_source/2.2/Unix/scilab-2.2/intersci/: fcalc.f
browsable_source/2.2/Unix/scilab-2.2/macros/algebre/: spaninter.sci
browsable_source/2.2/Unix/scilab-2.2/macros/arma/: acf.sci  armax.sci  arsimul.sci  epred.sci  exar2.sci  reglin.sci
browsable_source/2.2/Unix/scilab-2.2/macros/auto/: arhnk.sci  cainv.sci  cont_frm.sci  csim.sci  francis.sci  frep2tf.sci  g_margin.sci  imrep2ss.sci  kpure.sci  krac2.sci  minreal.sci  repfreq.sci  stabil.sci
browsable_source/2.2/Unix/scilab-2.2/macros/calpol/: colcompr.sci  horner.sci  lcm.sci  numer.sci  systmat.sci
browsable_source/2.2/Unix/scilab-2.2/macros/elem/: erfcx.sci  null.sci  or.sci  speye.sci  toeplitz.sci
browsable_source/2.2/Unix/scilab-2.2/macros/metanet/: %cigra.sci  %sigra.sci  circuit.sci  con_nodes.sci  connex.sci  graph_2_mat.sci  load_graph.sci  mat_2_graph.sci  max_cap_path.sci  max_flow.sci  min_lcost_cflow.sci  min_weight_tree.sci  save_graph.sci  show_graph.sci  strong_con_nodes.sci
browsable_source/2.2/Unix/scilab-2.2/macros/optim/: aplat.sci  lmisolver.sci  pencost.sci  quapro.sci
browsable_source/2.2/Unix/scilab-2.2/macros/percent/: %a2for.sci  %bcspb.sci  %choose.sci  %lns.sci  %lssalss.sci  %lssap.sci  %lssar.sci  %lssclss.sci  %lsscs.sci  %lssfs.sci  %lssilss.sci  %lssis.sci  %lsslp.sci  %lsslr.sci  %lssmp.sci  %lssmr.sci  %lssms.sci  %lssrp.sci  %lsssp.sci  %palss.sci  %par.sci  %pas.sci  %pcr.sci  %pflss.sci  %pllss.sci  %pmlss.sci  %pqs.sci  %prlss.sci  %prr.sci  %psr.sci  %pvr.sci  %rc2for.sci  %rcr.sci  %rdr.sci  %re.sci  %rfs.sci  %rir.sci  %rlr.sci  %rrp.sci  %rsr.sci  (+18 more)
browsable_source/2.2/Unix/scilab-2.2/macros/robust/: Makefile  des2ss.sci  h_inf.sci  nehari.sci
browsable_source/2.2/Unix/scilab-2.2/macros/sci2for/: adderr.sci  callfun.sci  f_tan.sci  modlst.sci  num2f.sci
browsable_source/2.2/Unix/scilab-2.2/macros/scicos/: ANIMXY_f.sci  DLR_f.sci  (+55 more)
browsable_source/2.2/Unix/scilab-2.2/man/: man-scilab.sh
browsable_source/2.2/Unix/scilab-2.2/routines/: Makefile  callinter.h  machine.h
browsable_source/2.2/Unix/scilab-2.2/scripts/: BEpsf.g  scilab.g
browsable_source/2.2/Unix/scilab-2.2/tests/: addmenu.tst  bezout.tst  break.dia.ref  demos.dia  demos.dialogs  dialogs.tst  dmrdsp.dia.ref  dmrdsp.tst  feval.tst  fort.tst  macro.dia.ref  macro.tst  matimp.tst  matnew.dia.ref  matode.tst  matops.tst  matqz.tst  polops.dia.ref  sparse.dia.ref
browsable_source/2.2/Unix/scilab-2.2/util/: Makefile_callsci
browsable_source/2.2/Unix/scilab-2.2/xmetanet/: Makefile
browsable_source/2.3.1/Unix-Windows/scilab-2.3/: Makefile.in  Makefile.incl  Makefile.mak  Path.incl  README-2.3.1  README.win32  configure.in  patchlevel.h
browsable_source/2.3.1/Unix-Windows/scilab-2.3/Win95-util/: Makefile.mak  Rscilab.rc  runscilab.c
browsable_source/2.3.1/Unix-Windows/scilab-2.3/config/: Makefile.hpux
browsable_source/2.3.1/Unix-Windows/scilab-2.3/geci/: scruteur.c
browsable_source/2.3.1/Unix-Windows/scilab-2.3/imp/: Makefile.mak  NperiPos.ps  Slatdoc.c  Slatexpr2.c
browsable_source/2.3.1/Unix-Windows/scilab-2.3/macros/: cat
browsable_source/2.3.1/Unix-Windows/scilab-2.3/man/: Makefile
browsable_source/2.3.1/Unix-Windows/scilab-2.3/maple/: examples.maple
browsable_source/2.3.1/Unix-Windows/scilab-2.3/routines/: Make.lib.mak  Makesubdirs.bat  callinter.h  params.h  stack.h
browsable_source/2.3.1/Unix-Windows/scilab-2.3/scripts/: Makefile.in
browsable_source/2.3.1/Unix-Windows/scilab-2.3/tests/: calpol.tst  colnew.sci  externals.f  fort.2  links.dia.ref  listextraction.dia.ref  listinsertion.tst  lstops.tst  matode.tst  metanet.dia.ref  odedc.dia.ref  sound.tst  sprintf.tst  strelm.dia.ref
browsable_source/2.3.1/Unix-Windows/scilab-2.3/util/: Gload.sce  sci2for.f  scidoc
browsable_source/2.3.1/Unix-Windows/scilab-2.3/wless/: popfile.c
browsable_source/2.3.1/Unix-Windows/scilab-2.3/xmetanet/: graph.c  graphics.c  help.c  save.c
(+154167 files in other folders)
